<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lookate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Refresh</string>
    <string name="Klik">Click</string>
    <string name="action_search">Search</string>
    <string name="food">food</string>
    <string name="search_hint">What are you looking?</string>
    <string name="search_result">Look for</string>
    <string name="makanan">angkringan streetfood fastfood warunglesehan cartfood restaurant</string>
    <string name="tipe_residen">hotel villa losmen board renthouse</string>
    <string name="residen">residen</string>
    <string name="tipe_transport">bus kereteapi taksi pesawat kapal</string>
    <string name="transport">transport</string>
    <string name="shop">shop</string>
    <string name="tipe_shop">streetshop mall market bakery departmentstore stationary bookstore</string>
    <string name="publicservice">public</string>
    <string name="text">Pilih kategori yang Anda Cari</string>
    <string name="title_activity_main_activity2">Food</string>
    <string name="title_activity_main_activity3">Transportation</string>
    <string name="title_activity_main_activity4">Penginapan</string>
    <string name="title_activity_main_activity5">Shop</string>
    <string name="title_activity_main_activity6">Public Service</string>
    <string name="getmap">Get Location</string>
    <string name="testimoni">Testimoni</string>
    <string name="menu">Menu</string>
    <string name="harga">Harga</string>
    <string name="jenis">Tipe Toko</string>
    <string name="barang">Barang</string>
    <string name="special">Special Offer :</string>
    <string name="pelayanan">Jenis Pelayanan</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main_activity7">MainActivity7</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
