<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageViewmakanan"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.29" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:id="@+id/textView"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/jenis"
            android:textColor="@color/myBlue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/myBlue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

        <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/barang"
            android:textColor="@color/myBlue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/myBlue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/list_divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/list_divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/list_divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

        <Button
            android:id="@+id/shop_map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/myBlue"
            android:text="@string/getmap"
            android:textColor="@color/myWhite"
            />


</LinearLayout>
</ScrollView>